src/objects/Project_Product__c.object
<CustomObject>
    <description>What products and services are being delivered on a project.</description>
    <label>Project Product</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Project Product Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>License_Edition__c</fullName>
        <inlineHelpText>Hosting type</inlineHelpText>
        <label>License Edition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Community</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Plus</fullName>
                </value>
                <value>
                    <fullName>Advanced</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Line_Description__c</fullName>
        <label>Line Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Project Products</relationshipLabel>
        <relationshipName>Project_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Project_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalPrice__c</fullName>
        <formula>Quantity__c * UnitPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <label>Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>all_temp</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>License_Edition__c</columns>
        <columns>Line_Description__c</columns>
        <columns>Product__c</columns>
        <columns>Project__c</columns>
        <columns>Quantity__c</columns>
        <columns>UnitPrice__c</columns>
        <columns>TotalPrice__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>all_temp</label>
    </listViews>
</CustomObject>